syntax = "proto3";
package auth;

option go_package = "./pkg/auth";
option csharp_namespace = "Osinica.Proto.Auth";

service AuthService {
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string userId = 3;
}
